--- a/Wstęp do js/index.html
+++ b/Wstęp do js/index.html
@@ -22,7 +22,7 @@
             body {
 background-color:#222244;}
         body {
-            border:0px d;
+            border:0px;
         }
 header {
 	background-color:#444466;
@@ -57,7 +57,7 @@ footer{
 	height: 17px;
 	text-align: center;
 	margin: 0 auto;
-	color: white;
+	color: #ffffff;
 	border-bottom-left-radius: 15px;
 	border-bottom-right-radius: 15px;
 	font-size: 8px;
@@ -184,7 +184,11 @@ footer{
 
         function setPanel()
         {
-
+            var id = document.getElementById("divSel").value;
+            if (id != "all")
+            {
+                document.getElementById("kolorTekstu").value = document.getElementById(id).style.color;
+            }
         }
         
     </script>
@@ -209,7 +213,7 @@ footer{
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam. Quisque semper justo at risus. Donec venenatis, turpis vel hendrerit interdum, dui ligula ultricies purus, sed posuere libero dui id orci. Nam congue, pede vitae dapibus aliquet, elit magna vulputate arcu, vel tempus metus leo non est. Etiam sit amet lectus quis est congue mollis. Phasellus congue lacus eget neque. Phasellus ornare, ante vitae consectetuer consequat, purus sapien ultricies dolor, et mollis pede metus eget nisi. Praesent sodales velit quis augue. Cras suscipit, urna at aliquam rhoncus, urna quam viverra nisi, in interdum massa nibh nec erat.
         </div>
         <div class="panel">
-            Kolor tekstu: <input type="color" id="kolorTekstu" onchange="setTextColor()"><br>
+            Kolor tekstu: <input type="color" id="kolorTekstu" onchange="setTextColor()" value="#ffffff"><br>
             Wielkosc liter: <select id="wielkoscLiter" onchange="setTextSize()">
                 <option value="10px">10px </option>
                 <option value="12px">12px </option>
