I readed smth in internet

--- a/Wstęp do js/wia3.html
+++ b/Wstęp do js/wia3.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<script src="main.js" type="text/javascript">
+<script>
     function sysInfo(){
         document.getElementById("box").innerHTML="browser code name "+
             navigator.appCodeName+" "+navigator.appName+" "+navigator.appVersion+
@@ -33,7 +33,35 @@
         if (number > 5){ alert("Condition met!");}
         else { alert("Error! Condition not met!");}
     }
-
+    function check_e2(){
+        const dayOfWeek = document.getElementById("input_e2").value;
+        switch (dayOfWeek){
+            case "1":
+                alert("Monday");
+                break;
+            case "2":
+                alert("Tuesday");
+                break;
+            case "3":
+                alert("Wednesday");
+                break;
+            case "4":
+                alert("Thursday");
+                break;
+            case "5":
+                alert("Friday");
+                break;
+            case "6":
+                alert("Saturday");
+                break;
+            case "7":
+                alert("Sunday");
+                break;
+            default:
+                alert("There's no such day!");
+                break;
+        }
+    }
     function check_e3(){
         if (document.getElementById("check_e3").checked) { alert("Checkbox checked!");}
         else {alert("Checkbox unchecked!");}
