--- a/Wstęp do js/wia3.html
+++ b/Wstęp do js/wia3.html
@@ -6,7 +6,7 @@
     <title> Wia3 </title>
 </head>
 <body>
-
+<script src="main.js"></script>
 <script>
     function sysInfo(){
         document.getElementById("box").innerHTML="browser code name "+
@@ -33,35 +33,7 @@
         if (number > 5){ alert("Condition met!");}
         else { alert("Error! Condition not met!");}
     }
-    function check_e2(){
-        const dayOfWeek = document.getElementById("input_e2").value;
-        switch (dayOfWeek){
-            case "1":
-                alert("Monday");
-                break;
-            case "2":
-                alert("Tuesday");
-                break;
-            case "3":
-                alert("Wednesday");
-                break;
-            case "4":
-                alert("Thursday");
-                break;
-            case "5":
-                alert("Friday");
-                break;
-            case "6":
-                alert("Saturday");
-                break;
-            case "7":
-                alert("Sunday");
-                break;
-            default:
-                alert("There's no such day!");
-                break;
-        }
-    }
+
     function check_e3(){
         if (document.getElementById("check_e3").checked) { alert("Checkbox checked!");}
         else {alert("Checkbox unchecked!");}
