--- a/Wstęp do js/spr.html
+++ b/Wstęp do js/spr.html
@@ -64,7 +64,7 @@
 <div id="box2"></div></br>
 
 
-<textarea id="text" onchange="check()"></textarea>
+<textarea id="text" oninput="check()"></textarea>
 <div id="box3">Liczba znaków:</div>
 <div id="box4">Zła liczba liter</div>
 </body>
